fixed problem with jumping content, with id

--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -1,5 +1,3 @@
-// 
-
 @import '../../scss/global_styles';
 
 .carousel {
@@ -65,6 +63,11 @@
   &__child {
     display: inline-block;
     width: 100%;
+
+    .product {
+      max-width: 100%;
+      height: 400px;
+    }
   }
 
   i.icon {
@@ -74,9 +77,83 @@
 
 @media (max-width: 768px) {
   .carousel {
+    max-height: 980px;
+    width: 80%;
+    align-items: center;
+
+    &__child {
+      .product {
+        padding: 20px;
+        max-width: 100%;
+        height: 980px;
+      }
+    }
 
     &__nav {
       display: none;
     }
   }
 }
+
+@media (max-width: 680px) {
+  .carousel{
+    &__child {
+      .product {
+        height: 850px;
+      }
+    }
+    
+  }
+}
+
+@media (max-width: 600px) {
+  .carousel{
+    &__child {
+      .product {
+        height: 800px;
+      }
+    }
+    
+  }
+}
+
+@media (max-width: 540px) {
+  .carousel{
+    &__child {
+      .product {
+        height: 680px;
+      }
+    }
+  }
+}
+
+@media (max-width: 450px) {
+  .carousel{
+    &__child {
+      .product {
+        height: 590px;
+      }
+    }
+  }
+}
+
+@media (max-width: 400px) {
+  .carousel{
+    &__child {
+      .product {
+        height: 540px;
+      }
+    }
+  }
+}
+
+@media (max-width: 350px) {
+  .carousel{
+    &__child {
+      .product {
+        height: 480px;
+      }
+    }
+  }
+}
+
